# OGTest

./: .gitignore  CMakeLists.txt  README.md
Source/: CMakeLists.txt  Reel.cpp  Reel.h  SlotMachine.cpp  SlotMachine.h  StateMachine.cpp  StateMachine.h  States.cpp  States.h  UserInterface.cpp  UserInterface.h  main.cpp
